--- a/thor.yml
+++ b/thor.yml
@@ -12,6 +12,9 @@
   - name: ssh config without fingertips
     blockinfile:
       path: /home/thor/.ssh/config
+      name: thor
+      group: thor
+      mode: 0600
       create: True
       block: |
         Host *
