Update thor.yml 3

--- a/thor.yml
+++ b/thor.yml
@@ -12,17 +12,21 @@
   - name: ssh config without fingertips
     blockinfile:
       path: /home/thor/.ssh/config
+      owner: thor
+      group: thor
+      mode: 0600
       create: True
       block: |
         Host *
           StrictHostKeyChecking no
           UserKnownHostsFile /dev/null
-  - name: Directory attributes
-    ansible.builtin.file:
-      path: /home/thor/.ssh
-      state: directory
-      recurse: yes
-      mode: u=rw,g=,o=
-      name: thor
-      group: thor
+
+#  - name: Directory attributes
+#    ansible.builtin.file:
+#      path: /home/thor/.ssh
+#      state: directory
+#      recurse: yes
+#      mode: u=rw,g=,o=
+#      name: thor
+#      group: thor
       
