--- a/thor.yml
+++ b/thor.yml
@@ -26,7 +26,7 @@
 #      path: /home/thor/.ssh
 #      state: directory
 #      recurse: yes
-#      mode: u=rw,g=,o=
-#      name: thor
+#      mode: 0600
+#      owner: thor
 #      group: thor
       
