--- a/postfix.yml
+++ b/postfix.yml
@@ -12,8 +12,8 @@
 
   - name: create/update user mail user
     ansible.builtin.user:
-      name: "{ stuser }"
-      password: "{{ stpassword | password_hash('sha512') }}"
+      name: "{{ stuser }}"
+      password: "{{ stpassword }} | password_hash('sha512')"
 
   - name: install package postfix
     ansible.builtin.package:
