--- a/postfix.yml
+++ b/postfix.yml
@@ -57,7 +57,7 @@
       state: absent
     loop: '{{ pfix }}'
 
-  - name: install package postfix
+  - name: restart service postfix
     ansible.builtin.service:
       name: postfix
       state: restarted
